<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/btn7"
        app:layout_constraintBaseline_toBaselineOf="@+id/b8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="37dp"
        android:text="@string/btn8"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toStartOf="@+id/b9" />

    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn9"
        app:layout_constraintBaseline_toBaselineOf="@+id/b8"
        app:layout_constraintEnd_toEndOf="@+id/bopen"
        app:layout_constraintStart_toEndOf="@+id/b2" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="@string/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/b5" />

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="19dp"
        android:text="@string/btn5"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="@+id/b2" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/btn6"
        app:layout_constraintBaseline_toBaselineOf="@+id/b5"
        app:layout_constraintEnd_toEndOf="@+id/b3" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="19dp"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btn2"
        app:layout_constraintBottom_toTopOf="@+id/bopen"
        app:layout_constraintEnd_toStartOf="@+id/b3" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:text="@string/btn3"
        app:layout_constraintBaseline_toBaselineOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="@+id/bopen" />

    <Button
        android:id="@+id/b0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn0"
        app:layout_constraintStart_toStartOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/bback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:text="@string/btnBack"
        app:layout_constraintEnd_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/bopen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="222dp"
        android:text="@string/btnOpen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/num"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/b8"
        app:layout_constraintEnd_toEndOf="@+id/b2"
        app:layout_constraintStart_toStartOf="@+id/b2" />

</androidx.constraintlayout.widget.ConstraintLayout>